feat: add personal account visibility
